fix: chart container overflow-y

--- a/src/components/ChartContainer/index.less
+++ b/src/components/ChartContainer/index.less
@@ -14,6 +14,9 @@
 .card {
   display: flex;
   flex-direction: column;
-  overflow-y: auto;
+
+  :global(.ant-card-body) {
+    overflow-y: auto;
     &:extend(.scrollbar all);
+  }
 }
